envoy.old.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/posts"
                          route:
                            cluster: posts_service
                        - match:
                            prefix: "/users"
                          route:
                            cluster: users_service
                        - match:
                            prefix: "/auth"
                          route:
                            cluster: auth_service
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: auth_service
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: auth_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: auth
                  port_value: 9990

    - name: users_service
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: users_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: users
                  port_value: 8889

    - name: posts_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: posts_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: posts
                  port_value: 7778
